# EIC_MMStripCZ

macros/: DisplayOn.C  DrawMaterialBudget.cpp  Fun4All_G4_Example01.C  init_gui_vis.mac  phpythia6.cfg  phpythia6_ep.cfg  vis.mac
source/: CreateCZHitContainer.cc  CreateCZHitContainerLinkDef.h  Makefile.am  PHG4CylinderStripDetector.cc  PHG4CylinderStripDetector.h  PHG4CylinderStripSteppingAction.cc  PHG4CylinderStripSubsystem.cc  PHG4CylinderStripSubsystem.h  PHG4CylinderStripSubsystemLinkDef.h  configure.ac
